<?xml version="1.0"?>
<package format="2">

  <name>driver_proximity</name>
  <version>1.0.0</version>
  <description>The driver_proximity package provides a ROS driver for a digital proximity sensor.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@todo.gmail.com">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs_ext</depend>

</package>
